apps/linkding/base/linkding_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linkding-deployment
  namespace: linkding
  labels:
    app: linkding
spec:
  replicas: 1
  selector:
    matchLabels:
      app: linkding
  template:
    metadata:
      labels:
        app: linkding
    spec:
      securityContext:
        runAsUser: 82
        runAsGroup: 82
        fsGroup: 82
      containers:
      - name: linkding
        image: sissbruecker/linkding
        ports:
        - containerPort: 9090
        volumeMounts:
          - mountPath: "/etc/linkding/data"
            name: linkding-volume
      volumes:
        - name: linkding-volume
          persistentVolumeClaim:
            claimName: linkding-claim
