apps/linkding/base/linkding_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: linkding-service
  namespace: linkding
spec:
  selector:
    app: linkding
  ports:
    - port: 80
      targetPort: 9090
  type: ClusterIP
